--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
+    "react-confirm-alert": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
