--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "material-ui": "^0.20.2",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-confirm-alert": "^2.1.0",
