--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.6"
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^5.4.6",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
