--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.1-alpha.1",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.4.6",
     "multer": "^1.4.1",
