--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-confirm-alert": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "require-context": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
