--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-star-rating-component": "^1.4.1",
     "require-context": "^1.1.0"
   },
   "scripts": {
